[project]
name = "comfyui-seamless-clone"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["numpy==2.2.0", "opencv_python==4.10.0.84", "torch==2.5.1"]

[project.urls]
Repository = "https://github.com/Aksaz/comfyui-seamless-clone"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mahdi"
DisplayName = "comfyui-seamless-clone"
Icon = ""
